--- a/login.html
+++ b/login.html
@@ -5,5 +5,5 @@
     </head>
 <body>
     <div id="login">
-        <input type="password" name="Username">
+        <input type="password" name="pass">
     </div>
