--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <ul>
   <li><a href="#">Create Quiz</a></li>
 </ul>
-<button id="quiz" type=button>Creates a quiz!</button>
+<button id="quiz" type=button clas="btn btn-success">Creates a quiz!</button>
   </div>
   <div id="account">
   <a href="login.html" id="start"> Get Started </a>
