--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
 	<title> Quiz Site </title>
 </head>
 <body>
-  <div id="nav"> 
-<ul>
-  <li><a href="#">Create Quiz</a></li>
-</ul>
-<button id="quiz" type=button clas="btn btn-success">Creates a quiz!</button>
-  </div>
-  <div id="account">
-  <a href="login.html" id="start"> Get Started </a>
-  </div>
 </body>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -26,8 +17,21 @@
     <title> Quiz Site </title>
   </head>
   <body>
+    <nav class="navbar navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">QuizIT</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="newquiz.html">Make Quiz</a></li>
+      <li><a href="quiz.html">Do Quiz</a></li>
+      <li><a href="quiz.html">About</a></li>
+    </ul>
+  </div>
+</nav>
     <div class="center">
-      <a href="newquiz.html">Make quiz</a>
+      <a href="newquiz.html">Make Quiz</a>
       <a href="quiz.html">Do Quiz</a>
     </div>
   </body>
