making text centered

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title> Quiz Site </title>
   </head>
   <body>
-    <a href="newquiz.html">Make quiz</a>
-    <a href="quiz.html">Do Quiz</a>
+    <div class="center">
+      <a href="newquiz.html">Make quiz</a>
+      <a href="quiz.html">Do Quiz</a>
     </div>
   </body>
 </html>
