--- a/about.html
+++ b/about.html
@@ -5,10 +5,8 @@
 <link rel="stylesheet" href="stylesheets.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="script.js"> </script>
-	<title> Quiz Site </title>
+	<title> Quiz Site - About </title>
 </head>
-<body>
-</body>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link rel="stylesheet" href="stylesheets.css">
@@ -20,19 +18,21 @@
     <nav class="navbar navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">QuizIT</a>
+      <a class="navbar-brand" href="index.html">QuizIT</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="newquiz.html">Make Quiz</a></li>
       <li><a href="quiz.html">Do Quiz</a></li>
-      <li><a href="about.html">About</a></li>
+      <li class="active"><a href="#">About</a></li>
     </ul>
   </div>
 </nav>
-    <div class="center">
-      <a href="newquiz.html">Make Quiz</a>
-      <a href="quiz.html">Do Quiz</a>
-    </div>
+    <div class="center"5px><font size="6">
+      QuizIT is a project in progress currently being worked on by Elijah and Ari, right now the quiz system only holds one fact but we are going to make it so there can be many quizes with multiple facts and answers!
+   </font> </div>
+  </body>
+</html>
+
   </body>
 </html>
