--- a/newquiz.html
+++ b/newquiz.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    </head>
-
-    <body>
-        <p>question</p>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<link rel="stylesheet" href="stylesheets.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="script.js"> </script>
+	<title> Quiz Site - New Quiz </title>
+</head>
+  <body>
+    <nav class="navbar navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="index.html">QuizIT</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="index.html">Home</a></li>
+      <li class="active"><a href="#">Make Quiz</a></li>
+      <li><a href="quiz.html">Do Quiz</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </div>
+</nav>  <div class="items">
+        <p>Question:</p>
         <input type="text" id="question" />
-        <p>answer</p>
+        <p>Answer:</p>
         <input type="text" id="answer" />
         <br>
         <br>
         
-        <button id="finish">Finish</button>
-
+        <button id="finish">Publish Quiz</button>
+        </div>  
         <script>
             // Initialize Firebase
             var config = {
