--- a/quiz.html
+++ b/quiz.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    </head>
-
-    <body>
-        <p>question 1:</p>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<link rel="stylesheet" href="stylesheets.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="script.js"> </script>
+	<title> Quiz Site - New Quiz </title>
+</head>
+  <body>
+    <nav class="navbar navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="index.html">QuizIT</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="index.html">Home</a></li>
+      <li class="active"><a href="newquiz.html">Make Quiz</a></li>
+      <li><a href="#">Do Quiz</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </div>
+</nav> 
+<div class="items">
+        <p>Question:</p>
         <p id="question"></p>
-        <input type="text" id="answer" />
-        <button id="check">check</button>
+        <input type="text" id="answer" /><br><br>
+        <button id="check">Check</button>
         <p id="correct"></p>
-
+</div>
         <script>
             var config = {
                 apiKey: "AIzaSyDwWGylVWs-p5R1d02KMXBgGW707QERx50",
