--- a/newquiz.html
+++ b/newquiz.html
@@ -20,7 +20,7 @@
       <li><a href="about.html">About</a></li>
     </ul>
   </div>
-</nav>  
+</nav>  <div class="items">
         <p>Question:</p>
         <input type="text" id="question" />
         <p>Answer:</p>
@@ -29,7 +29,7 @@
         <br>
         
         <button id="finish">Publish Quiz</button>
-
+</div>
         <script>
             // Initialize Firebase
             var config = {
