--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,7 @@
   </div>
 </nav> 
 <div class="items">
+        <h1 id="quizname"></h1>
         <p>Question:</p>
         <p id="question"></p>
         <input type="text" id="answer" /><br><br>
@@ -40,19 +41,19 @@
             firebase.initializeApp(config);
 
             var database = firebase.database();
-            var quizRef = database.ref("/");
-            var text;
+            var quizRef = database.ref("quizes/"+getUrlVars()["id"]);
+            var quiz;
             
-            quizRef.once('value', function(textt) {
-                text = textt.val();
-                $("#question").append(text["question"]);
-                //$("#answer").append(text["answer"]);
+            quizRef.once('value', function(newquiz) {
+                quiz = newquiz.val();
+                $("#quizname").append(quiz["name"])
+                $("#question").append(quiz["question"]);
             });
 
             $("#check").click(function() {
                 var answer = $("#answer").val();
                 var c = $("#correct");
-                if(answer == text["answer"]) {
+                if(answer == quiz["answer"]) {
                     c.empty();
                     c.append("Correct!");
                 } else {
@@ -60,6 +61,17 @@
                     c.append("Incorrect!");
                 }
             });
+
+            function getUrlVars() {
+                var vars = [], hash;
+                var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+                for(var i = 0; i < hashes.length; i++) {
+                    hash = hashes[i].split('=');
+                    vars.push(hash[0]);
+                    vars[hash[0]] = hash[1];
+                }
+                return vars;
+            }
 
         </script>
     </body>
