Fixed general issues, such as no nav bar on findquiz.html and padded the Database feed to center, etc..

--- a/findquiz.html
+++ b/findquiz.html
@@ -9,7 +9,19 @@
         <title> Quiz Site - Find Quiz </title>
     </head>
 
-    <body>
+    <body>   <nav class="navbar navbar">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">QuizIT</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="newquiz.html">Make Quiz</a></li>
+      <li><a href="findquiz.html">Do Quiz</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </div>
+</nav>
         <table id="table">
             <thead>
                 <th>Name</th>
