--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="newquiz.html">Make Quiz</a></li>
-          <li><a href="quiz.html">Do Quiz</a></li>
+          <li><a href="findquiz.html">Do Quiz</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
