--- a/newquiz.html
+++ b/newquiz.html
@@ -23,9 +23,9 @@
       <a class="navbar-brand" href="#">QuizIT</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="newquiz.html">Make Quiz</a></li>
-      <li><a href="quiz.html">Do Quiz</a></li>
+      <li><a href="findquiz.html">Do Quiz</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
   </div>
