--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="newquiz.html">Make Quiz</a></li>
-      <li><a href="quiz.html">Do Quiz</a></li>
+      <li><a href="findquiz.html">Do Quiz</a></li>
       <li class="active"><a href="#">About</a></li>
     </ul>
   </div>
