--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
     <ul class="nav navbar-nav">
       <li><a href="index.html">Home</a></li>
       <li class="active"><a href="newquiz.html">Make Quiz</a></li>
-      <li><a href="#">Do Quiz</a></li>
+      <li><a href="findquiz.html">Do Quiz</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
   </div>
