fixes for bugs and fixed position for new question button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </div>
     </nav>
-    <div class="center">
+    <div class="center" id="getSTARTED">
       <a href="newquiz.html">Make Quiz</a>
       <a href="findquiz.html">Do Quiz</a>
     </div>
