--- a/newquiz.html
+++ b/newquiz.html
@@ -45,7 +45,7 @@
         
         <button id="finish">Publish Quiz</button>
 </div>
-<button type="button" id="questionadd">Add Another Question</button>
+<button type="button" id="questionadd" class="items">Add Another Question</button>
 
         </div>
         <script>
