again another push

--- a/findquiz.html
+++ b/findquiz.html
@@ -23,7 +23,7 @@
   </div>
 </nav><div id="find">
 <h3>Filter Search Results </h3>
-        <input type="text" placeholder="Filter Quiz Results"/>
+        <input type="text" placeholder="Filter Quiz Results" id="find"/>
         <table class="table">
             </div>
             <thead>
