--- a/newquiz.html
+++ b/newquiz.html
@@ -30,7 +30,7 @@
     </ul>
   </div>
 </nav>  <div class="items">
-        <p>Name:</p>
+        <p>Quiz Title:</p>
         <input type="text" id="name" />
         <p>Question:</p>
         <input type="text" id="question" />
