--- a/findquiz.html
+++ b/findquiz.html
@@ -25,7 +25,7 @@
     <input type="text" id="find" />
     <table id="table">
       <thead>
-        <th>Name</th>
+        <th><h1>Name</h1></th>
       </thead>
     </table>
     <script>
