--- a/quiz.html
+++ b/quiz.html
@@ -24,12 +24,7 @@
     </nav>
     <div class="items">
       <h1 id="quizname"></h1>
-      <div id="quiz">
-        <!--<p><strong>Question:</strong></p>
-        <p id="question"></p>
-        <input type="text" id="answer" /><br><br>
-        <p id="correct"></p>-->
-      </div>
+      <div id="quiz"></div>
       <button id="check">Check</button>
       <br><br><br><br><br>
       <p id="sharewfriends"><strong>Want to share this QuizIT with friends? Copy the share link!</strong></p>
